@@ -77,7 +77,7 @@ public class NodeXYController extends BaseController {
             return ResponseEntity.ok(nodeXYId);
         } catch (SQLException e) {
             e.printStackTrace();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new Long(0));
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Long.valueOf(0));
         } finally {
             try {
                 // close prepared statement
